# fiascode

./: .gitignore  .sconsign.dblite  README.md  SConstruct  build.sh  clean.sh  program  todo.txt
buildtools/: cpype.h  cpype.py  wurst.py
buildtools/parsley/ometa/: runtime.py
example/: .sconsign.dblite  SConstruct  build.bat  clean.bat
example/buildtools/: cpype.h  cpype.py
example/src/: test.cpy
parsleytest/: cpype.h  pt.py  pyp3c.h  test.cpy  test.fsc
plain/: CMakeLists.txt  cmake_gcc.bat  main.cpp
plain/build_gcc/: CMakeCache.txt  Makefile  cmake_install.cmake
plain/src/lzz/: main.lzz
plain2/: .sconsign.dblite  SConstruct
plain2/src/: helper.lzz
src/: test.cpy
